# swm

./: .gitignore  README.md  setup.cfg  setup.py  silica_demo.py
swm/: SilicaWindowManager.py  __init__.py
swm/components/: __init__.py  border.py  key.py  point.py  rect.py  screen.py  screencell.py  textattributes.py  textbuffer.py  window.py
swm/widgets/: __init__.py  _baselist.py  checklist.py  menu.py
