[metadata]
name = swm
version = 1.0
release = 1.0
description = A simple terminal user interface framework
author = Ben Bridle
author_email = bridle.benjamin@gmail.com
url = http://github.com/benbridle/swm
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console :: Curses
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.6
    Topic :: Software Development :: User Interfaces
